--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,4 +9,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: cp ~/.env ./
-      - run: ./vendor/bin/sail up
+      - run: ./vendor/bin/sail down -v
+      - run: ./vendor/bin/sail up -d
